Modified style of front page

--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -17,16 +17,21 @@
             padding: 0 5%;
             box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
         }
-        label[id]{
+        label[id=title]{
             display: block;
+            color: white;
             text-align: center;
             line-height: 150%;
             font-size: 60px;
             font-family: "Leelawadee UI Semilight", serif;
         }
-        label[id="content"]{
+        label[id=content]{
+            display: block;
+            color: black;
             text-align: center;
+            line-height: 150%;
             font-size: 20px;
+            font-family: "Leelawadee UI Semilight", serif;
         }
         input[id]:hover{
             border: 3px solid orange;
@@ -44,9 +49,7 @@ This test measures your BIG5 personality, one of the most popular scientific mea
     Please answer honestly with regard to how you see yourself in the present moment, not how you would like to be in the future.
     There are no incorrect answers nor any personality profile that is inherently more desirable than another.
     <br><br>
-    If you would like an even more accurate measure of your personality traits, then please check 120-IPIP test.
-    <br><br>
-    The test's duration is about 10 minutes.<p></p>
+    The test's duration is about 5 minutes.<br><br>
     </label>
     <div align="center">
         <input type="button" id="A"
