Modified style of end page

--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -1,5 +1,11 @@
 <html lang="en">
 <head><title>Your Personality</title>
+    <script type="text/javascript">
+        history.pushState(null,null,location.href);
+        window.onpopstate = function () {
+            history.go(1);
+        };
+    </script>
 <style>
     html{
             font-family: "Leelawadee UI Semilight",serif;
