--- a/templates/myapp/help_improve.html
+++ b/templates/myapp/help_improve.html
@@ -51,7 +51,7 @@
         }
 
         .btn-link {
-            color: #181a27;
+            color: #ffffff;
             text-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.35);
             font-weight: bold;
             background-color: transparent;
