--- a/templates/myapp/help_improve.html
+++ b/templates/myapp/help_improve.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><title>Improve</title>
+    {% load static %}
+    <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
     <style>
         html {
             background-color: #35445D;
