--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -1,5 +1,6 @@
 <html xmlns:button="http://www.w3.org/1999/html" lang="en">
 <head title="Mini-ipip test">
+    <meta charset="UTF-8">
     <style>
         html{
             background-color: #35445D;
@@ -39,6 +40,7 @@
     </style>
     {% load static %}
     <title>Mini Ipip test</title>
+    <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
     <img src="{% static "myapp/logo-collab.png" %}" alt="logo-collab"><p></p>
     <label id="title">Welcome to the mini-IPIP test </label><p></p>
 </head>
