--- a/templates/myapp/test.html
+++ b/templates/myapp/test.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head><title>Mini Ipip Test</title>
+    {% load static %}
+    <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
 <style>
     html{
         font-family: "Leelawadee UI Semilight",serif;
