Improve pagination style and descriptions

--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -17,8 +17,10 @@
     div[id]{
         box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
         border-radius: 3px;
-        background-color: black;
+        background-color: none;
         color: whitesmoke;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     h1{
         font-size: 30px;
@@ -67,7 +69,7 @@
 </style></head>
 <div align="center">
     <h1>Thank you!</h1>
-    <h3>Thank you for participating in the Mini Ipip test.</h3>
+    <h3>Thank you for participating in the mini-IPIP test.</h3>
 
     {% if messages %}
     {% for message in messages %}
