--- a/templates/myapp/help_improve.html
+++ b/templates/myapp/help_improve.html
@@ -7,6 +7,7 @@
         html {
             background-color: #35445D;
             font-family: "Leelawadee UI Semilight", serif;
+            background: -webkit-gradient(linear, left top, left bottom, from(#35445D), to(#91B9A4)) no-repeat fixed;
         }
 
         form {
@@ -73,8 +74,8 @@
 <article class="container-fluid">
     <form name="form" action method="post">
         <h1>Help us improve our research</h1>
-        <p>All answers are optional. If you'd rather not answer a particular question it's fine to leave it empty.
-            Any data you agree to provide will be helpful.</p>
+        <p>All answers are optional. If you'd rather not answer a particular question, you can leave it empty.
+            Any data you agree to provide will be helpful. Thanks!</p>
         <div class="form-group">
             <label for="day_of_birth">Date of birth</label>
             <div class="input-group">
