--- a/templates/myapp/test.html
+++ b/templates/myapp/test.html
@@ -1,9 +1,10 @@
 <html lang="en">
-<head><title>Mini Ipip Test</title>
+<head><title>mini-IPIP Test</title>
     {% load static %}
     <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
 <style>
     html{
+        padding-top: 100px;
         font-family: "Leelawadee UI Semilight",serif;
         background-color: #35445D;
         background: -webkit-gradient(linear, left top, left bottom, from(#35445D), to(#91B9A4)) no-repeat fixed;
@@ -47,7 +48,7 @@
     <h1 align="center" id="header"> {{ question.question_text|upper }} </h1>
         </div>
            <form action="{% url 'myapp:vote' id=user question_id=question.id page=page%}" method="post">
-           <p></p>
+           <p></p><br>
         {% for choice in question.choice_set.all %}
             <p></p>
             <input type="submit" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.choice_text }}">
@@ -61,12 +62,18 @@
         <div align="center">
             <br><br>
             <input type="button" id="previous" onclick="location.href='?id={{ user }}&page={{ questions.previous_page_number }}'"
-            value="Previous Question" > <p></p>
+            value="<  Previous Question" > <p></p>
         {% endif %}
         </div>
+        <br>
         <center>
         <span class="current">
-            Question {{ questions.number }} of {{ questions.paginator.num_pages }}.
+            Question {{ questions.number }} of {{ questions.paginator.num_pages }}<br>
+            <progress max="{{ questions.paginator.num_pages }}" value="{{ questions.number }}">
+                <div>
+                    <span>Progress: {{ questions.number }}*100/{{ questions.paginator.num_pages }}</span>
+                </div>
+            </progress>
         </span>
             </center>
     </span>
