Further improvement to content and layout

--- a/templates/myapp/help_improve.html
+++ b/templates/myapp/help_improve.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><title>Improve</title>
+<head><title>mini-IPIP test</title>
     {% load static %}
     <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
     <style>
