--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -1,5 +1,5 @@
 <html xmlns:button="http://www.w3.org/1999/html" lang="en">
-<head title="Mini-ipip test">
+<head title="mini-IPIP test">
     <meta charset="UTF-8">
     <style>
         html{
@@ -57,7 +57,7 @@
 <body>
 <label id="content">
     <p>This test measures your <b>Big Five</b> personality [1]. The Big Five is one of the most popular scientific measures of personality.</p>
-    <p>You will be presented with 20 statements, one at a time, and you will be asked to evaluate the extent to which you agree with them on a 5-point scale (<i>Strongly Disagree -- Strongly Agree</i>). You may go back 
+    <p>You will be presented with 20 statements, one at a time, and you will be asked to evaluate the extent to which you agree with them on a 5-point scale [<i>Strongly Disagree</i> = 1, ..., <i>Strongly Agree</i> = 5]. You may go back 
        and change a previous answer, but you cannot skip forward. Please, answer honestly with regard to how you see yourself in the present moment, 
        not how you would like to be in the future. Also, keep in mind that there are no incorrect answers nor any personality profile that is better than another.
     </p>
