--- a/templates/myapp/test.html
+++ b/templates/myapp/test.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><title>mini-IPIP Test</title>
+<head><title>mini-IPIP test</title>
     {% load static %}
     <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
 <style>
