--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><title>Your Personality</title>
+<head><title>mini-IPIP test</title>
     {% load static %}
     <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
     <script type="text/javascript">
@@ -69,7 +69,7 @@
 </style></head>
 <div align="center">
     <h1>Thank you!</h1>
-    <h3>Thank you for participating in the mini-IPIP test.</h3>
+    <h3>Thank you for completing the mini-IPIP test</h3>
 
     {% if messages %}
     {% for message in messages %}
@@ -79,7 +79,7 @@
     {% endfor %}
 {% endif %}
 
-    <label id="header">Your personality:</label><p></p>
+    <label id="header">Your Big Five personality trait scores:</label><p></p>
 </div>
 <div id="results" align="center">
     <p><label id="detail">Openness: {{ openness }} / 5</label> </p>
@@ -89,72 +89,48 @@
     <p><label id="detail">Neuroticism: {{ neuroticism }} / 5</label> </p>
 
     <h2 align="left">Openness</h2>
-        <p id="content" align="left">Openness to experience describes a dimension of personality that distinguishes
-            imaginative, creative people from down-to-earth, conventional people.</p>
+        <p id="content" align="left"> High=inventive/curious vs. Low=consistent/cautious</p>
         <p align="left">
-            This trait refers to the extent to which people prefer novelty versus convention.
-            From the way you answered the questions, you seem to describe yourself as someone who dislikes
-            needless complexity, and prefers the familiar over the unusual. You might say that you are more conservative
-            than many, but not to an extreme level, and that you value practical outcomes over flighty imagination. </p>
+            This trait refers to the extent to which a person is open to experiencing a variety of activities, proactively seeking and appreciating unfamiliar experiences for its own sake. People with low scores in Openness tend to be more conservative and close-minded. </p>
         <p align="left">
-        <strong>Reflective question:</strong>
-        <em>How do you respond to people who have lots of new ideas?</em>
+        From the way you answered the questions, you seem to describe yourself as someone who dislikes needless complexity, and prefers the familiar over the unusual. To reflect on your level of Openness, ask yourself:  <em>How do I respond to people who have lots of new ideas?</em>
         </p>
 
     <h2 align="left">Coscientiousness</h2>
-        <p id="content" align="left">Conscientiousness concerns the way in which we control,
-            regulate, and direct our impulses.</p>
+        <p id="content" align="left"> High=efficient/organized vs. Low=easy-going/careless</p>
         <p align="left">
-            This trait refers to the extent to which people prefer an organised, or a flexible, approach in life.
-            From the way you answered the questions, you seem to describe yourself as someone who is random and fun
-            to be around but that you can plan and persist when life requires it. From your responses it appears that
-            depending on the situation, you can make quick decisions or deliberate for longer if necessary. </p>
+            This trait refers to people's tendency to plan in advance, act in an organized or thoughtful way and their degree of organization, persistence, and motivation in goal-directed behavior.  Individuals with low Conscientiousness levels tend to be more tolerant and less bound by rules and plans. </p>
         <p align="left">
-        <strong>Reflective question:</strong>
-        <em>How do you go about organising your workload?</em>
+        From your responses it appears that depending on the situation, you can make quick decisions or deliberate for longer if necessary. To further reflect on your level of Coscientiousness, ask yourself: <em>How do I organize my workload?</em>
         </p>
 
     <h2 align="left">Extraversion</h2>
-        <p align="left" id="content">Extraversion is marked by pronounced engagement with the external world,
-            versus being comfortable with your own company.</p>
+        <p align="left" id="content">High=outgoing/energetic vs. Low=solitary/reserved</p>
         <p align="left">
-        This trait refers to the extent to which we enjoy company, and seek excitement and stimulation.
-            From the way you answered the questions, you seem to describe yourself as someone who enjoys
-            and actively seeks out social occasions, but would say that they're not everything.
-            You might say that sometimes it is nice to step back for a while and have a quiet night in.
+        This trait refers to the tendency to seek stimulation in the company of others, thus assessing people's amount of interpersonal interaction, activity level, need for stimulation, and capacity for joy. Those low in Extraversion are reserved and solitary.
         </p>
     <p align="left">
-        <strong>Reflective question:</strong>
-        <em> What role do you tend to play in a team? (at work or in social activities)</em>
+        From the way you answered the questions, you seem to describe yourself as someone who enjoys
+        and actively seeks out social occasions, but would say that they're not everything. To further reflect on your level of Extraversion, ask yourself:  <em> What role do I tend to play in a team? (at work or in social activities)</em>
     </p>
 
     <h2 align="left">Agreeableness</h2>
-        <p align="left" id="content">Agreeableness reflects individual differences in concern
-            with cooperation and social harmony.</p>
+        <p align="left" id="content">High=friendly/compassionate vs. Low=challenging/detached</p>
         <p align="left">
-            This trait refers to the way people express their opinions and manage relationships.
-            From the way you answered the questions, you seem to describe yourself as someone who people can find
-            difficult to get along with when you first meet, as you can be suspicious of their motives.
-            Your responses suggest that over time though people warm to you, and you
-            to them, although that doesn't stop you telling them "how it is".
+            This trait refers to a person's tendency to be compassionate and cooperative toward others, with respect to thoughts, feelings, and actions. Low Agreeableness is related to being suspicious, challenging, and antagonistic towards other people.
         </p>
     <p align="left">
-        <strong>Reflective question:</strong>
-        <em>When others are experiencing problems, what do you do?</em>
+        From the way you answered the questions, you seem to describe yourself as someone who people can find
+        difficult to get along with when you first meet, as you can be suspicious of their motives. To further reflect on your level of Agreeableness, ask yourself:  <em>When others are experiencing problems, what do I do?</em>
     </p>
 
         <h2 align="left">Neuroticism</h2>
-        <p align="left" id="content">Neuroticism refers to the tendency to experience negative emotions.</p>
+        <p align="left" id="content">High=sensitive/nervous vs. Low=secure/confident</p>
         <p align="left">
-            This trait refers to the way people cope with,
-            and respond to, life's demands.
-            From the way you answered the questions, you seem to describe yourself as someone who is generally calm.
-            Based on your responses, you come across as someone who can feel emotional
-            or stressed out by some experiences, however your feelings tend to be warranted by the situation.
+            This trait refers to the extent to which a person's emotions are sensitive to the environment, thus identifying individuals who lack in emotional stability, prone to psychological distress, anxiety, excessive cravings or urges. Those who have a low score in Neuroticism are calmer and more stable.
         </p>
     <p align="left">
-        <strong>Reflective question:</strong>
-        <em>Which situations make you feel under pressure and which situations do not?</em>
+        To further reflect on your level of Neuroticism, ask yourself: <em>Which situations make me feel under pressure and which situations do not?</em>
     </p>
 </div>
 <div align="center"><p></p>
