Improve paragraph spacing

--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -55,12 +55,17 @@
         text-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
         color: white;
     }
-    p[id="content"]{
-        color: orange;
+    h2{
+        margin-top: 30px;
     }
     h1[id="msg"]{
         color:#35445D;
         border-color: #181a27;
+    }
+    p[id="content"]{
+        font-size: 14px;
+        margin-top: -20px;
+        color: orange;
     }
     .info{
         background-color: whitesmoke;
