Modified background color

--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <style>
         html{
-            background-color: #35445D;
-            background: -webkit-gradient(linear, left top, left bottom, from(#35445D), to(#91B9A4)) no-repeat fixed;
-        }
+             background-color: #10131c;
+             background: -webkit-gradient(linear, left top, left bottom, from(#10131c), to(#759685)) no-repeat fixed;
+      }
         input[id] {
             font-size: 24px;
             font-family: "Leelawadee UI Semilight",serif;
