--- a/templates/myapp/help_improve.html
+++ b/templates/myapp/help_improve.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head><title>mini-IPIP test</title>
     {% load static %}
     <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
     <style>
         html {
-            background-color: #35445D;
             font-family: "Leelawadee UI Semilight", serif;
-            background: -webkit-gradient(linear, left top, left bottom, from(#35445D), to(#91B9A4)) no-repeat fixed;
-        }
+            background-color: #10131c;
+            background: -webkit-gradient(linear, left top, left bottom, from(#10131c), to(#759685)) no-repeat fixed;   
+	}
 
         form {
             text-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.35);
@@ -31,30 +31,30 @@
             border: 0;
             border-radius: 3px;
             padding: 0 3px;
-            color: #555555;
+            color: #181a27;
             font-family: "Leelawadee UI Semilight", serif;
         }
 
         .btn-primary:hover {
-            border: 3px solid black;
+            border: 3px solid orange;
         }
 
         .btn-primary {
-            color: #181a27 !important;
-            background-color: #ffb81c;
+            color: #ffffff !important;
+            background-color: #181a27;
             box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.35);
             border-radius: 3px;
             font-weight: bold;
             font-family: "Leelawadee UI Semilight", serif;
             padding: .3em 1em;
-            border: 3px solid #ffb81c;
+            border: 3px solid #181a27;
             transition: all .3s;
             margin-right: 10px;
             cursor: pointer;
         }
 
         .btn-link {
-            color: #ffffff;
+            color: #181a27;
             text-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.35);
             font-weight: bold;
             background-color: transparent;
