--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -11,9 +11,9 @@
 <style>
     html{
             font-family: "Leelawadee UI Semilight",serif;
-            background-color: #35445D;
-            background: -webkit-gradient(linear, left top, left bottom, from(#35445D), to(#91B9A4)) no-repeat fixed;
-        }
+            background-color: #10131c;
+            background: -webkit-gradient(linear, left top, left bottom, from(#10131c), to(#91B9A4)) no-repeat fixed;
+      	}
     div[id]{
         box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
         border-radius: 3px;
@@ -29,18 +29,18 @@
     }
     label[id]{
         font-size: 35px;
-        color: black;
+        color: darkgrey;
         text-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
     }
     input[name="email"]{
         font-size: 20px;
-        border: 3px solid #ffffff;
-        background-color: #ffffff;
-        color: black;
-        text-align: center;
-        border-radius: 3px;
-        cursor: pointer;
-        padding: 0 5%;
+        color: white;
+    	border-radius: 3px;
+    	font-family: "Leelawadee UI Semilight",serif;
+    	border: 3px solid #181a27;
+    	background-color: #181a27;
+    	text-align: left;
+    	cursor: pointer;
         box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
     }
     input:hover{
