CSS updates to index and evaluation

--- a/templates/myapp/evaluation.html
+++ b/templates/myapp/evaluation.html
@@ -14,6 +14,9 @@
             background-color: #10131c;
             background: -webkit-gradient(linear, left top, left bottom, from(#10131c), to(#91B9A4)) no-repeat fixed;
       	}
+    div[id="results"]{
+        color: whitesmoke;
+    }
     div[id="email"]{
         box-shadow: 0 3px 4px 0 rgba(0,0,0,0.35);
         border-radius: 3px;
@@ -56,6 +59,7 @@
     }
     h2{
         margin-top: 30px;
+        color: whitesmoke;
     }
     h1[id="msg"]{
         color:#35445D;
@@ -64,7 +68,7 @@
     p[id="content"]{
         font-size: 14px;
         margin-top: -20px;
-        color: orange;
+        color: lightgrey;
     }
     .info{
         background-color: whitesmoke;
