--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -62,7 +62,7 @@
     <link rel="shortcut icon" href="{% static "myapp/favicon.ico" %}"/>
     <a href="http://collab.di.uniba.it/"><img src="{% static "myapp/logo-collab.png" %}" alt="logo-collab" height="75px"
                                               width="200px"></a>
-    <a href="https://www.uniba.it/"><img src="{% static "myapp/logo-uniba.jpg" %}"
+    <a href="https://www.uniba.it/"><img src="{% static "myapp/logo-uniba.png" %}"
                                          alt="logo-uniba" height="75px" width="200px" align="right"></a>
     <p></p>
     <label id="title">Welcome to the mini-IPIP test </label>
